# trees-brandenburg

./: .gitignore  README.md  pyproject.toml
notebooks/: classification.ipynb
trees_brandenburg/: plotting.py  preprocess.py
trees_brandenburg/modelling/: train.py
