[tool.poetry]
name = "trees-brandenburg"
version = "0.1.0"
description = ""
authors = [
    "Florian-Katerndahl <florian@katerndahl.com>",
    "Fabian Fassnacht <fabian.fassnacht@fu-berlin.de>"
]
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
rasterio = "^1.4.1"
torch = {version = "^2.4.1", source = "pytorch_gpu"}
torchvision = {version = "^0.19.1", source = "pytorch_gpu"}
jupyterlab = "^4.2.5"
pylint = "^3.3.1"
pycodestyle = "^2.12.1"
nbconvert = "^7.16.4"

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
